<resources>
    <string name="app_name">Cinema</string>
    <string name="simple_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- menu item trên appbar-->
    <string name="menu_item_search">Tìm kiếm</string>
    <string name="menu_item_notification">Thông báo</string>
    <string name="menu_item_account">Tài khoản</string>
    <string name="action_settings">Cài đặt</string>
    <string name="action_contact">Liên hệ</string>

    <!-- bottom navigation item-->
    <string name="bottom_navigation_trang_chu">Trang chủ</string>
    <string name="bottom_navigation_phim">Phim</string>
    <string name="bottom_navigation_rap_phim">Rạp phim</string>
    <string name="bottom_navigation_tai_khoan">Tài khoản</string>
    <string name="bottom_navigation_bai_viet">Điện ảnh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Tài khoản-->
    <string name="title_activity_quen_mat_khau">Quên mật khẩu?</string>
    <string name="quan_ly_tai_khoan">Tài khoản</string>
    <string name="chinh_sua_tai_khoan">Chỉnh sửa tài khoản</string>
    <string name="dang_ky">ĐĂNG KÝ</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="xac_nhan_mat_khau">Xác nhận mật khẩu</string>
    <string name="tao_tai_khoan_moi">Tạo tài khoản mới</string>
    <string name="co_tai_khoan">Có tài khoản? Đăng nhập</string>

    <!--    DAt ve-->
    <string name="txtSelectDate">Select Date</string>
    <string name="txtstartTime">Start-Time</string>
    <string name="txtRunTime">Run-Time </string>
    <string name="txtCleaningTime">Cleaning-Time</string>
    <string name="txtCloseTime">Theatre-CloseTime</string>
    <string name="btnSchedule">Schedule</string>
    <string name="selectMovieGuest">Select a movie to Watch</string>
    <string name="textViewDate">Select Date</string>
    <string name="textViewDate1">dd/mm/yy</string>
    <string name="spinnerDate">Schedule</string>
    <string name="textViewTime">Select Time</string>
    <string name="textViewTime1">00 : 00 : 00</string>
    <string name="spinnerTime">Schedule</string>
    <string name="btnPickDate">Pick Date</string>
    <string name="goBack">Back to HomePage</string>
    <string name="txtMovieScheduled">Movie Scheduled</string>
    <string name="btnProceedToPay">Select Seats</string>
    <string name="textViewTickets">Select Tickets</string>
    <string name="pickSeatTitle">Pick Your Seats</string>
    <string name="btnConfirmSeats">Confirm Seats and pay</string>
    <string name="receiptTitle">Your Receipt</string>
    <string name="printTicket">Print Ticket</string>
    <string name="ticketTitle">Your Ticket</string>
    <string name="btnbookAnother">Book another Movie</string>
    <!--    Dia diem-->
    <string-array name="diadiem_array">
        <item>TP.HCM</item>
        <item>Hà Nội</item>
        <item>Bình Thuận</item>
    </string-array>
    <string-array name="rap_array">
        <item>Cinema Tân Bình</item>
        <item>Cinema Củ Chi</item>
        <item>Cinema Bình Thuận</item>
    </string-array>
</resources>