<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fontFamily="@font/opensansregular">

    <item
        android:title="Item"
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/menu_item_notification"
        app:showAsAction="always" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_user"
        android:title="@string/menu_item_account"

        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />
</menu>
